--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <HTML>
+<head>
+<link rel=stylesheet type="text/css" href=style.css
+</head>
 <body>
 <h1 style=text-align:center>
 Come back later!
