--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <head>
 <link rel=stylesheet type="text/css" href=style.css
 </head>
-<body>
+<body style=text-align:center>
 <h1 style=text-align:center>
-Come back later!
+Before emailing me you should know...
 </h1>
+
+<ol>
+<li>I am a web developer/designer</li>
+<li>I will be playing around with this site later on</li>
+<li>I don't care what product you're selling, I AIN'T BUYING</li>
+</ol>
+<br>
+<br>
+<br>
+<h1>Come back soon!</h1>
 </body></html>
