--- a/index.html
+++ b/index.html
@@ -1,19 +1,4 @@
 <HTML>
-<head>
-<link rel=stylesheet type="text/css" href=style.css
-</head>
-<body style=text-align:center>
-<h1 style=text-align:center>
-Before emailing me you should know...
-</h1>
-
-<ol>
-<li>I am a web developer/designer</li>
-<li>I will be playing around with this site later on</li>
-<li>I don't care what product you're selling, I AIN'T BUYING</li>
-</ol>
-<br>
-<br>
-<br>
-<h1>Come back soon!</h1>
-</body></html>
+  <script>alert('this')</script>
+</html>
+  
