--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <HTML>
-  <script>alert("Go away, I'm not ready");</script>
+  <?php
+    echo "<script>alert("Go away, I'm not ready");</script>"
+  ?>
 </html>
   
