--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
+  <script> var x = "Not ready"; </script>
   <?php
-    echo "<script>alert("Go away, I'm not ready");</script>"
+    echo "<script>alert(x);</script>"
   ?>
 </html>
   
