--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
   <script> var x = "Not ready"; </script>
   <?php
-    echo "<script>alert(x);</script>"
+    echo "<script>alert(x);</script>";
   ?>
 </html>
   
