--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
-<HTML>
+<html>
+<title>Jonathan Bond</title>
 <head>
-<link rel=stylesheet type="text/css" href=style.css
+    <!-- Pre-reqs -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- End pre-reqs-->
+    <link rel=stylesheet text=text/css href=main_style.css>
+    <link rel=stylesheet text=text/css href=special_effects.css>
+    <link rel=stylesheet text=text/css href=misc.css>
+    <link rel=stylesheet text=text/css href=sizes.css>
 </head>
-<body style=text-align:center>
-<h1 style=text-align:center>
-Before emailing me you should know...
-</h1>
+<body>
+    <div class=container>
+        <!-- Paralax intro -->
+        <div class="paralax padding-bottom-medium" style=background-image:url("3d_geometry_background.jpg");>
+            <div>
+                <h1 class=center></h1>
+            </div>
+            <div class=center style=padding-top:50px;margin-bottom:100px>
+                <div class="box grey">
+                    <div class=row style=display:inline-flex;margin-top:25px>
+                        <div>
+                            <h2 class="vertical-align left" style=margin-left:10px>Jonathan Bond</h2>
+                            <h4 class=left style=margin-top:35px><i>UI/UX specialist, full stack, SEO</i></h4>
+                        </div>
+                        <img src=headshot_temp.jpg class="vertical-align bordered-image" style="width:140px;height:140px;margin:5px 90px 0px auto">
+                    </div>
+                    <div class="row left" style="display:inline-flex;margin:25px 0px">
+                        <div class=col-2>
+                            <h5>Long version</h5>
+                            <p class="about-me-description" style=margin-left:10px;line-height:1.45em>College student studying physics and a practicing software engineer specializing in web development.  My preferred back-end is Python's micro-framework Flask, but have no problem flipping and managing a MEAN app.  I do part-time freelancing, and for more info on me/to hire me please refer to my contact info below.  <i>All bot spam will be fed to my Python email-monitoring spam filter (it catches what Gmail misses)</i>.</p>
+                        </div>
+                        <div class=col-2 style=margin-left:25px;>
+                            <h5>Short version</h5>
+                            <ul>
+                                <li>Full stack</li>
+                                <li>Python Flask, MEAN stack</li>
+                                <li>Starting software engineer</li>
+                                <li>Python proficient</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!--End paralx intro -->
+        <div id=specialties-container>
+            <div class="grey" style=width:100%>
+                <h1 class=center>Skills</h1>
+                <div class="col-2 center">
+                    <h3 class=center>
+                </div>
+                <div class="col-2 center">
+                    <img src=headshot_temp.jpg class="bordered-image">
+                </div>
+            </div>
 
-<ol>
-<li>I am a web developer/designer</li>
-<li>I will be playing around with this site later on</li>
-<li>I don't care what product you're selling, I AIN'T BUYING</li>
-</ol>
-<br>
-<br>
-<br>
-<h1>Come back soon!</h1>
-</body></html>
+        </div>
+    </div> <!-- End container -->
+</body>
+</html>
